name:                field
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          Index Int <vlad.z.4096@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Vinyl.Field
  build-depends:       base >=4.8 && <4.9
               ,       vinyl >=0.5
               ,       template-haskell >=2.10
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall

test-suite regression
  main-is:             Regression.hs
  build-depends:       base >=4.8 && <4.9
               ,       field
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -Wall
